--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <footer>
             <p class="attribution">
               Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-              Coded by <a href="#">Netanel Kadosh</a>.
+              Coded by <a href="https://netanelk.github.io/">Netanel Kadosh</a>.
             </p>
         </footer>
     </body>
